[package]
name = "papers"
version = "0.4.0"
authors = ["store2be <tech@store2be.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.0"
dotenv = "0.11.0"
failure = { version = "0.1.5", features = ["derive"] }
futures01 = { package = "futures", version = "0.1.26" }
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
http = "0.1.16"
http-service = "0.2.0"
http-service-hyper = "0.2.0"
hyper = "0.12.28"
hyperx = "0.15.0"
log = "0.3.8"
mime = "0.3.5"
mktemp = "0.3.1"
regex = "0.2.2"
reqwest = "0.9.11"
rusoto_core = "0.37.0"
rusoto_credential = "0.16.0"
rusoto_s3 = "0.37.0"
sentry = "0.15.1"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
sloggers = "^0.2"
structopt = "0.2.15"
tar = "0.4.14"
tera = "^0.10"
tide = "0.2.0"
tokio = "0.1.19"
tokio-core = "0.1.10"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
tokio-process = "0.2.0"
uuid = { version = "0.6", features = ["v4"] }

[dependencies.slog]
version = "^2"
features = ["max_level_debug", "release_max_level_debug"]

[dev-dependencies]
quickcheck = "0.4.1"
rand = "0.3.18"
tide-static-files = { path = "/home/tom/oss/tide-static-files" }
