[package]
name = "papers"
version = "0.4.2"
authors = ["store2be <tech@store2be.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
dotenv = "0.14.1"
failure = { version = "0.1.5", features = ["derive"] }
futures01 = { package = "futures", version = "0.1.26" }
futures-preview = { version = "0.3.0-alpha.18", features = ["compat"] }
http = "0.1.18"
hyper = "0.12.33"
hyperx = "0.15.1"
mktemp = "0.4.0"
regex = "1.2.1"
reqwest = "0.9.19"
rusoto_core = "0.41.0"
rusoto_credential = "0.41.0"
rusoto_s3 = "0.41.0"
sentry = "0.16.0"
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive"] }
sloggers = "0.3.2"
structopt = "0.2.18"
tar = "0.4.26"
tera = "0.11.20"
tokio = "0.1.22"
tokio-process = "0.2.4"
uuid = { version = "0.7.4", features = ["v4"] }
warp = "0.1.18"
pretty_env_logger = "0.3.1"

[dependencies.slog]
version = "2.5.2"
features = ["max_level_debug", "release_max_level_debug"]

[dev-dependencies]
quickcheck = "0.8.5"
rand = "0.7.0"
